--- a/notebooks/headspace.ipynb
+++ b/notebooks/headspace.ipynb
@@ -31,6 +31,19 @@
     "\n",
     "[Interactive Notebooks](https://github.com/dotnet/interactive) take us there and help us share the concept with others. These things aren't a joke... they are the *ENTIRE Dotnet API* available to you live, interactively.  Live, interactive Graphs already built in for you to work with."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```graphviz\n",
+    "digraph Sample1 {\n",
+    "       A;\n",
+    "       B;\n",
+    "       A -> B;\n",
+    "}\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
